upgrade to java 11

--- a/authentication-service/src/main/resources/messages.properties
+++ b/authentication-service/src/main/resources/messages.properties
@@ -1,8 +1,9 @@
 # Token messages key
+access-token-not-found=Access Token not found in Redis
 refresh-header-not-found=Could not find specify header
-refresh-token-not-found=Refresh token not found in the database
 reset-token-not-found=Reset token not found
 reset-token-expired=Reset token has been expired
+
 
 # User messages key
 user-authenticate.fail=Username or password wrong
